--- a/css/styles.css
+++ b/css/styles.css
@@ -7789,7 +7789,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
+  background-color:#b1d662;;
 }
 
 .bg-secondary {
