--- a/css/styles.css
+++ b/css/styles.css
@@ -7789,7 +7789,7 @@ textarea.form-control-lg {
 
 .bg-primary {
   --bs-bg-opacity: 1;
-  background-color:#b1d662;;
+  background-color:#b1d662;
 }
 
 .bg-secondary {
