--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  background-color:#b1d662;
+  background-color: rgb(178, 245, 145);
 }
 
 hr {
