--- a/css/styles.css
+++ b/css/styles.css
@@ -594,6 +594,7 @@ progress {
 .img-fluid {
   max-width: 100%;
   height: auto;
+  padding-bottom: 10px;
 }
 
 .img-thumbnail {
@@ -867,6 +868,7 @@ progress {
 .g-4,
 .gx-4 {
   --bs-gutter-x: 1.5rem;
+  justify-content: space-around;
 }
 
 .g-4,
@@ -957,6 +959,7 @@ progress {
   .col-sm-6 {
     flex: 0 0 auto;
     width: 50%;
+    padding-bottom: 10px;
   }
 
   .col-sm-7 {
@@ -1373,6 +1376,7 @@ progress {
   .col-lg-4 {
     flex: 0 0 auto;
     width: 33.33333333%;
+    padding-bottom: 10px;
   }
 
   .col-lg-5 {
@@ -7474,8 +7478,8 @@ textarea.form-control-lg {
 }
 
 .py-5 {
-  padding-top: 3rem !important;
-  padding-bottom: 3rem !important;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 
 .pt-0 {
@@ -11373,7 +11377,7 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/first.jpg");
+  /* background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../assets/img/first.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11408,6 +11412,7 @@ header.masthead h1, header.masthead .h1 {
 #portfolio .container-fluid .portfolio-box, #portfolio .container-sm .portfolio-box, #portfolio .container-md .portfolio-box, #portfolio .container-lg .portfolio-box, #portfolio .container-xl .portfolio-box, #portfolio .container-xxl .portfolio-box {
   position: relative;
   display: block;
+  padding-bottom: 10px;
 }
 #portfolio .container-fluid .portfolio-box .portfolio-box-caption, #portfolio .container-sm .portfolio-box .portfolio-box-caption, #portfolio .container-md .portfolio-box .portfolio-box-caption, #portfolio .container-lg .portfolio-box .portfolio-box-caption, #portfolio .container-xl .portfolio-box .portfolio-box-caption, #portfolio .container-xxl .portfolio-box .portfolio-box-caption {
   display: flex;
@@ -11490,7 +11495,7 @@ header.masthead h1, header.masthead .h1 {
 #unique{
   height: 200px;
   margin-left: 50px;
-  border-radius: 20%;
+  border-radius: 50%;
 }
 .nowrap-set{
   white-space: nowrap;
@@ -11517,8 +11522,9 @@ header.masthead h1, header.masthead .h1 {
 .col-lg-new {
   flex-direction: row;
   width: fit-content;
-  margin-left: 3rem;
-  padding-left: 110px;
+  /* margin-left: 3rem; */
+  /* padding-left: 110px; */
+  justify-content: space-around;
 }
 .mt-new {
   margin-top: 2rem !important;
@@ -11557,4 +11563,112 @@ header.masthead h1, header.masthead .h1 {
 
 .logo{
   border-radius: 25px;
+}
+
+
+
+
+/* new added */
+
+
+.mySlides {
+  display: none
+}
+img {
+  vertical-align: middle;
+}
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 1.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+/* Caption text */
+.text {
+  color: #ffffff;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #ffffff;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #999999;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 1.6s ease;
+}
+.active,
+.dot:hover {
+  background-color: #111111;
+}
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+@-webkit-keyframes fade {
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
+}
+@keyframes fade {
+  from {
+    opacity: .4
+  }
+  to {
+    opacity: 1
+  }
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev,
+  .next,
+  .text {
+    font-size: 11px
+  }
 }
